CORE-7601: added the endpoint to delete resource types
